--- a/bin/install
+++ b/bin/install
@@ -47,7 +47,7 @@ install_rlwrap() {
     cd "$distination"
 
     echo "∗ Recreating configure file..."
-    autoreconf --install 2>/dev/null || fail "Could not recreate configure file"
+    autoreconf --install || fail "Could not recreate configure file"
 
     echo "∗ Configuring..."
     case "$OSTYPE" in
@@ -55,10 +55,10 @@ install_rlwrap() {
         CPPFLAGS="-I$(brew --prefix readline)/include" \
         CFLAGS="-I$(brew --prefix readline)/include" \
         LDFLAGS="-L$(brew --prefix readline)/lib" \
-          ./configure --prefix="$install_path" >/dev/null || fail "Could not configure"
+          ./configure --prefix="$install_path" || fail "Could not configure"
         ;;
       linux*)
-        ./configure --prefix="$install_path" >/dev/null || fail "Could not configure"
+        ./configure --prefix="$install_path" || fail "Could not configure"
         ;;
       *)
         fail "Unsupported platform..."
@@ -69,7 +69,7 @@ install_rlwrap() {
     make &>log.make || fail "Could not compile"
 
     echo "∗ Installing..."
-    make install >/dev/null || fail "Could not install"
+    make install || fail "Could not install"
 
     echo "The installation was successful!"
   ) || (
